resources/webidl2/test/invalid/baseline/sequence-empty.txt
Syntax error at line 1:
typedef sequence<> empty;
                 ^ Missing sequence subtype
